fix: Social buttons in footer, hamburger & logo on mobile resized

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,5 +1,5 @@
 .container {
-    margin-top: 50px;
+    margin-top: 25px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -9,6 +9,8 @@
 .container img {
     margin: 5px;
     cursor: pointer;
+    width: 20px;
+    height: 20px;
 }
 
 @media screen and (min-width: 641px) {
