--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -75,6 +75,9 @@
 
 .hamburgerIcon img {
   cursor: pointer;
+  width: 30px;
+  height: 30px;
+
 }
 
 @media screen and (max-width: 720px) {
@@ -87,8 +90,8 @@
   
   }
   .logo img {
-    width: 200px;
-    height: 66px;
+    width: 150px;
+    height: 50px;
   }
 }
 @media screen and (min-width: 721px) {
